--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monovision Studio</title>
     <meta name="author" content="Elisey">
-    <meta name="description" content="My first page">
+    <meta name="description" content="my first page">
     <script src="https://kit.fontawesome.com/20b5889165.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/modern-normalize.min.css">
